# iProTraX

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  README_ZH.md  RELEASE_NOTES_v8.0.0.md  TECH_STACK.md  VERSION_UPDATE_CHECKLIST.md  check_users.js  cookies.txt  deploy.sh  docker-compose.yml  eslint.config.mjs  fix-database.sh  next.config.ts  package-lock.json  package.json
.github/workflows/: cd.yml  ci.yml
data/: A_Product_Line_template.xlsx  B_Product_Line_template.xlsx  TEST_template.xlsx  Test_Product_Line_template.xlsx  config.json  machine-id
data/db/: prod.db.backup.20260110_203304
docs/: USER_MANUAL.md  USER_MANUAL_ZH.md
e2e/: basic-flow.spec.ts
messages/: en.json  zh.json
native/license-verifier/: Cargo.toml
native/license-verifier/pkg/: license_verifier.d.ts  license_verifier.js  license_verifier_bg.wasm  license_verifier_bg.wasm.d.ts  package.json
native/license-verifier/src/: lib.rs
playwright-report/: index.html
prisma/: schema.prisma  seed.ts
public/: manifest.json  package.afphoto  robots.txt  sitemap.xml
scripts/: backfill-orders.ts  build-wasm.sh  create-superadmin.ts  diagnose-login.ts  docker-bootstrap.sh  fix-admin.ts  fix-comment-stats.ts  migrate_assembly_to_assy.js  reset-admin-password.js  reset-password-by-id.ts  reset-superadmin-password.ts  seed-large-data.ts  seed-products.ts  validate-session.ts  watch-imports.ts  watcher.ts
src/: middleware.ts
src/app/: globals.css  layout.tsx
src/components/: AIChatPanel.tsx  BarcodeScanner.tsx  (+14 more)
test-results/: .last-run.json
(+169 files in other folders)
