[package]
name = "license-verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
# We use p256 and signature for pure-Rust ECDSA P-256 verification
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
# Base64 for decoding the JWT parts
base64 = "0.22"
# Chrono for time checking
chrono = { version = "0.4", features = ["wasmbind"] }
# Anyhow for error handling
anyhow = "1.0"
# Explicitly enable getrandom js support for WASM
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
