[package]
name = "license-verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
base64 = "0.21"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
getrandom = { version = "0.2", features = ["js"] }
